# cc-skill-optimizer

./: .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  CLAUDE.md  README.md  cc-skill-optimizer-improvements.md  cc-skill-optimizer-research.md  cc-skill-optimizer-review.md  diagnose.py  inspect_jsonl.py  optimize.py  pyproject.toml  watch_and_learn.py
skills/: banking-analytics-seed.md
skills/python-313-modern-syntax/: SKILL.md
skills/python-313-modern-syntax/evals/: evals.json
skills/python-modern-design-patterns/: SKILL.md
src/: dspy_shared.py  evaluator.py  llm_config.py  parse_session.py  section_parser.py  synthetic_evaluator.py  utils.py
tests/: test_11_dspy_native_gepa.py  test_15_1_neutral_closing_score.py  test_15_2_split_corpus.py  test_16_2_asi_order.py  test_16_3_multi_scoring.py  test_18_1_length_proposer.py  test_18_2_warm_seed.py  test_18_3_task_gen_tokens.py  test_18_4_judge_format.py  test_18_5_structural_score.py  test_20_dspy_docstrings.py  test_20_dspy_extraction_e2e.py  test_20_dspy_skill_extraction.py  test_4_1_oa_log.py  test_4_2_max_evals.py  test_4_2_max_evals_crash_paths.py  test_4_3_m27_judge.py  test_4_4_judge_truncation.py  test_4_5_dspy_guard.py  test_5_1_cache_bonus_removal.py  test_5_2_dspy_extraction.py  test_5_3_judge_weight_defaults.py  test_6_1_subagent_glob.py  test_6_2_size_stability.py  test_6_3_skip_paths.py  test_6_4_neutral_closing.py  test_7_1_merge_idempotency.py  test_7_2_key_collision.py  test_7_3_llm_config_opt_in.py  test_7_4_nested_fallback.py  test_backup_rotation.py  test_evaluator_fixes.py  test_optimize_fixes.py  test_optimize_fixes_remaining.py  test_section_parser_idempotency.py  test_token_stats_dedup.py
