[project]
name = "cc-skill-optimizer"
version = "0.1.0"
description = "GEPA + DSPy optimizer for Claude Code SKILL.md, CLAUDE.md, and AGENTS.md"
requires-python = ">=3.13"

dependencies = [
    # Core optimizers
    "gepa>=0.1.1",
    "dspy>=3.0.0,<4.0.0",  # dspy 3.x has native dspy.GEPA; gepa version pinned
    "pyyaml>=6.0",          # YAML validation gate for --target agent

    # LLM routing (gepa + dspy both use litellm under the hood)
    # dspy 3.x hard-requires litellm>=1.64.0 — see [tool.uv] override below
    "litellm>=1.64.0",

    # Anthropic SDK (for direct API fallback)
    "anthropic>=0.49.0",

    # Data
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # Dev utilities
    "rich>=13.0.0",
    "typer>=0.15.0",
]

[project.optional-dependencies]
judge = [
    "litellm[proxy]>=1.64.0",
]
live = []
all = [
    "cc-skill-optimizer[judge]",
]

# ---- Build ----------------------------------------------------------------
# Tell hatchling that all importable code lives under src/
# Without this, hatchling looks for a cc_skill_optimizer/ package at root and fails.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src", "optimize.py", "watch_and_learn.py", "tests", "skills"]

# ---- Dev dependencies ----------------------------------------------------
# uv >=0.5 replaced [tool.uv.dev-dependencies] with PEP 735 dependency-groups.
# The old field still works but emits a deprecation warning; this silences it.
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
    "ty>=0.0.1a8",
]

# ---- UV resolver overrides ---------------------------------------------
# dspy 3.x declares `gepa[dspy]==0.0.27` as a hard pin, but the project
# uses gepa 0.1.1 (Phase 9 added multi-objective frontier_type support that
# is not in gepa 0.0.27). dspy.GEPA is a NATIVE implementation in dspy 3.x
# (lives in dspy/teleprompt/gepa/gepa.py) and does not use the external gepa
# package at runtime, so the version difference is harmless for dspy. The
# override forces uv's resolver to use gepa 0.1.1 globally without breaking
# dspy's subdependency graph or skipping dspy's 18 transitive runtime deps
# (orjson, typeguard, json-repair, tenacity, diskcache, cachetools,
# cloudpickle, xxhash, asyncer, regex, etc.). See FR-11.1.
[tool.uv]
override-dependencies = ["gepa>=0.1.1"]

# ---- Tool config ----------------------------------------------------------
[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
